--- a/FindProperty/appsettings.json
+++ b/FindProperty/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "FindPropertyContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FindProperty;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
