--- a/FindProperty/Properties/launchSettings.json
+++ b/FindProperty/Properties/launchSettings.json
@@ -12,14 +12,16 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "AZURE_USERNAME": "TP046084@mail.apu.edu.my"
       }
     },
     "FindProperty": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "AZURE_USERNAME": "TP046084@mail.apu.edu.my"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
