agents and service bus

--- a/FindProperty/FindProperty.csproj
+++ b/FindProperty/FindProperty.csproj
@@ -13,6 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20210314050427_appointment.cs" />
+    <Compile Remove="Migrations\20210314050427_appointment.Designer.cs" />
     <Compile Remove="Migrations\FindProperty1\20210308121800_AppointmentContext1.cs" />
     <Compile Remove="Migrations\FindProperty1\20210308121800_AppointmentContext1.Designer.cs" />
     <Compile Remove="Migrations\FindProperty1\20210308132805_Appointment2Context.cs" />
